--- a/www/css/custom_styles.css
+++ b/www/css/custom_styles.css
@@ -260,7 +260,7 @@ body::after {
 .header-title {
     font-size: 16px;
     font-weight: bold;
-    color: #000;
+    color: #0137A6;
     padding-left: 5px; /* Space after the vertical line */
 }
 
